--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ header{
   width: 40px;
 }
 .gmIcon{
-  width: 40px;
+  width: 40px;  
   margin-right:15px;
 }
 .gmailAcc{
@@ -207,17 +207,16 @@ header{
   flex-direction: column;
   justify-content: start;
   /* padding-bottom: 20px; */
-  
 }
 .icon-and-name{
   display: flex;
   justify-content: space-between;
   align-items: center;
-  font-size: 1vw;
+  font-size: .7vw;
 }
 .icon{
-  margin-right: 30px;
-  margin-left: 20%;
+  margin-right: 5%;
+  margin-left:20%;
 }
 .acc-name{
   margin-right: 30%;
@@ -238,32 +237,17 @@ header{
 
 /* Picture center */
 
-.picture-box{
-  width: 700px;
-  height: auto;
+.picture-box
+{
   position: relative;
   position: absolute;
-  bottom: 0;
-  left: 600px;
-  top: 300px;
+  left: 0;
+  right: 0;
+  bottom: 0%;
   display: flex;
   justify-content: center;
   align-items: center;
 }
-.joemarpic{
-  position: absolute;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-div .joemarpic{
-  width:100% ;
-  height: auto;
-  filter:drop-shadow( 0 0 15px rgba(0, 0, 0, 0.8));
-}
-.all{
-  width: 100%;
-}
-.joemar-picture{
-  width: 100%;
+.picture-box img{
+  max-width: 40%;
 }
