--- a/responsive.css
+++ b/responsive.css
@@ -1,4 +1,4 @@
-@media only screen and ( max-width: 768px) and (max-width: 1024px) {
+@media only screen and ( max-width: 768px){
   /* header */
   .bsit3a{
     font-size: 30px;
@@ -9,33 +9,63 @@
     font-size: .7rem;
   }
 
-  .picture-box,.tolero{
-   display: none; 
+  .webdev{
+    font-size: 1.5rem;
   }
 
+  header{
+    height: 10%;
+  }
+  .picture-box{
+    top: 0;
+  }
+  .picture-box img{
+    top: 10%;
+    right: 5%;
+    position: absolute;
+    border-bottom-right-radius: 30px;
+    border-bottom-left-radius: 30px;
+  }
+  
   .joemar{
-    font-size: 5vw;
+  font-size: 3rem;
   -webkit-text-stroke: black 2px;
+  }
+  .tolero{
+   display: none;
   }
   
  .left-section{
-  border: 1px solid black;
   display: flex;
   flex-direction: column;
   justify-content: center;
+  padding-right: 5%;
   } 
+
   .container{
     display: flex;
     flex-direction: column;
     width: 100%;
-    border: 1px solid black;
+    position: relative;
   }
 
   .skills-box{
-    width: 40%;
-    border: 1px solid black;
+    width: 45%;
+    height: 25vh;
     margin: 0;
+    font-size: 1rem;
+    align-self: end;
   }
+   
+  .skill-title{
+    font-size: 1.2rem;
+  }
+
+  .prog-lang{
+    justify-content: center;
+    text-align: center;
+    width: 30%;
+    }
 
   .joemar,.webdev,.description,.personal-info-button,.skills-box
   {
@@ -44,11 +74,64 @@
   }
 
   .description{
-    font-size: .7rem;
+    font-size:1rem;
     padding-bottom: 2%;
     padding-top: 2%;
   }
+  
   .personal-info-button{
     margin-bottom:5%;
+    width: 17vw;
+    font-size: 2vw;
   }
+
+  .right-section{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    margin-top: 10%;
+  }
+
+  .major-box{
+    width: 40%;
+    margin-right: 20%;
+    margin-left: 5%;
+    margin-top: -265px;
+  }
+  .yrbox1{
+    font-size: 1.6vw;
+  }
+  .social-title,.major-title
+  {
+    font-size: 1rem;
+  }
+  .social-box{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+  }
+
+  .social-acc
+  {
+    width: 50%;
+    height: 15vh;
+    margin-top: -50px;
+    margin-left: -52px;
+  }
+  
+  .social-box{
+    justify-content: space-evenly;
+  }
+
+  .acc-name{
+    display: none;
+  }
+
+  .Tolero{
+    display:unset;
+  }
+
+  
+
 }
