--- a/responsive.css
+++ b/responsive.css
@@ -161,9 +161,11 @@
 
 /* smartphone display */
 
-@media only screen and ( max-width: 600px){
+@media only screen and 
+( max-width: 600px){
   .container{
     position: relative;
+   
   }
 
   header .contact{
@@ -193,7 +195,7 @@
   }
 
   .description{
-    width: 100%;
+    min-width: 90%;
   }
   
   .social-acc,.major-box,.skills-box
@@ -202,8 +204,8 @@
   }
 
   .left-section{
-    border: 1px solid black;
-    
+    padding-right: 0;
+    margin: 0;
   }
 
   .circle{
@@ -223,7 +225,55 @@
     z-index: 1;
     position: absolute;
     top: 280px;
-}
+  }
 
+  .skills-box
+  {
+    width: 100%;
+    height: 40vh;
+    align-items: center;
+    align-self: center;
+ 
+  }
+  .skill-title{
+    font-size: 5vw;
+  }
+  .prog-lang{
+    margin: 0;
+    font-size: 1.2rem;
+  }
+  .rate{
+    margin-right: 10%;
+    padding-left: 0%;
+  }
+
+  .individual-skill{
+    justify-content: start;
+  }
+
+  .personal-info-button{
+    width: 24vw; 
+    font-size: 3vw;
+  }
+
+  .right-section{
+    flex-direction: column;
+    margin-right: 0;
+    padding-right: 0;
+  }
+
+  .major-box  {
+    width: 100%;
+  }
+  .major-title{
+  font-size: 4vw;
+  }
+  .yrbox1{
+  font-size: 3vw;
+  }
   
+
+
+
+
 }
