--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+html{
+  margin: 0;
+}
+
 body{
   margin: 0;
   padding:0;
@@ -137,7 +141,7 @@ header{
 }
 
 .prog-lang{
-  margin-left: 10%;
+  margin-left: 10%; 
 }
 
 .rate{
